--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,3 +1,63 @@
 {
-  "profile": "Профиль"
+  "Profile": "Профиль",
+  "title": "Название",
+  "Input_title_category": "Введите название категории",
+  "Limit": "Лимит",
+  "Min_summa": "Минимальная сумма",
+  "Create": "Создать",
+  "Edit": "Редактировать",
+  "Change_category": "Выберите категорию",
+  "Refresh": "Обновить",
+  "Sum": "Сумма",
+  "Date": "Дата",
+  "Category": "Категория",
+  "Categories": "Категории",
+  "Type": "Тип",
+  "Open": "Открыть",
+  "Accincurr": "Счет в валюте",
+  "Currency": "Курс валют",
+  "Valute": "Валюта",
+  "Curs": "Курс",
+  "Exit": "Выйти",
+  "Category_not_found": "Категорий пока нет",
+  "History": "История",
+  "Description": "Описание",
+  "Record": "Запись",
+  "not_found": "не найдена",
+  "Records_not_found": "Записей пока нет",
+  "Acc": "Счет",
+  "Home_buh": "Домашняя бухгалтерия",
+  "Not_blank": "Поле не может быть пустым",
+  "Not_email": "Не правильный формат почты",
+  "Password": "Пароль",
+  "Input_password": "Введите пароль",
+  "Min_pass": "Минимальный пароль",
+  "simvol_vi_vveli": "символов. Вы ввели",
+  "Enter": "Войти",
+  "No_acc": "Нет аккаунта",
+  "Register": "Зарегистрироваться",
+  "Planning": "Планирование",
+  "No_category": "Категории не заданы",
+  "Name": "Имя",
+  "New_record": "Новая запись",
+  "Rules_check": "С правилами согласен",
+  "Acc_is_set": "Уже есть аккаунт",
+  "Category_create": "Категория создана",
+  "Category_update": "Категория обновлена",
+  "View_record": "Посмотреть запись",
+  "Any_wrong": "Что-то пошло не так :(",
+  "Create_new_record": "Создать новую запись",
+  "Error": "Ошибка",
+  "logout": "Вы вышли из системы",
+  "login": "Необходима авторизация пользователя",
+  "404": "Страница не найдена",
+  "auth/wrong-password": "Пароль набран не верно",
+  "auth/user-not-found": "Пользователь не найден",
+  "auth/email-already-in-use": "Пользователь с данным e-mail существует",
+  "Back": "Назад",
+  "Minus_by_category": "Расходы по категориям",
+  "Create_record_success": "Запись успешно создана",
+  "Low_money": "На счету недостаточно средств",
+  "outcome": "Расход",
+  "income": "Доход"
 }
