--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,3 +1,63 @@
 {
-  "profile": "Профіль"
+  "Profile": "Профіль",
+  "title": "Название",
+  "Input_title_category": "Введіть назву категорії",
+  "Limit": "Ліміт",
+  "Min_summa": "Мінімальна сума",
+  "Create": "Створити",
+  "Edit": "Редагувати",
+  "Change_category": "Виберіть категорію",
+  "Refresh": "Оновити",
+  "Sum": "Сума",
+  "Date": "Дата",
+  "Category": "Категорія",
+  "Categories": "Категорії",
+  "Type": "Тип",
+  "Open": "Відкрити",
+  "Accincurr": "Рахунок у валюті",
+  "Currency": "Курс валют",
+  "Valute": "Валюта",
+  "Curs": "Курс",
+  "Exit": "Вийти",
+  "Category_not_found": "Категорій поки немає",
+  "History": "Історія",
+  "Description": "Опис",
+  "Record": "Запис",
+  "Not_found": "не знайдено",
+  "Records_not_found": "Записів поки немає",
+  "Acc": "Рахунок",
+  "Home_buh": "Домашня бухгалтерія",
+  "Not_blank": "Поле не може бути порожнім",
+  "Not_email": "Не правильний формат пошти",
+  "Password": "Пароль",
+  "Input_password": "Введіть пароль",
+  "Min_pass": "Мінімальний пароль",
+  "Simvol_vi_vveli": "символів. Ви ввели",
+  "Enter": "Увійти",
+  "No_acc": "Ні аккаунта",
+  "Register": "Зареєструватися",
+  "Planning": "Планування",
+  "No_category": "Категорії не задані",
+  "Name": "Ім'я",
+  "New_record": "Новий запис",
+  "Rules_check": "З правилами згоден",
+  "Acc_is_set": "Уже є аккаунт",
+  "Category_create": "Категорія створена",
+  "Category_update": "Категорія оновлена",
+  "View_record": "Подивитися запис",
+  "Any_wrong": "Щось пішло не так :(",
+  "Create_new_record": "Створити новий запис",
+  "Error": "Помилка",
+  "Logout": "Ви вийшли з системи",
+  "Login": "Необхідна авторизація користувача",
+  "404": "Сторінку не знайдено",
+  "Auth / wrong-password": "Пароль набраний не вірно",
+  "Auth / user-not-found": "Користувач не знайдений",
+  "Auth / email-already-in-use": "Користувач з даними email існує",
+  "Back": "Назад",
+  "Minus_by_category": "Витрати за категоріями",
+  "Create_record_success": "Запис успішно створена",
+  "Low_money": "На рахунку недостатньо коштів",
+  "outcome": "Витрата",
+  "income": "Дохід"
 }
